# configuration cantools                        -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# Copyright (C) 2007-2009 Andreas Heitmann

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.


AC_PREREQ(2.61)
AC_INIT(cantools, 0.4, aheit@web.de)
AC_CONFIG_SRCDIR([src/libcandbc/parser.y])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([1.9 foreign])
AC_CONFIG_MACRO_DIR([m4])
AC_LIBTOOL_WIN32_DLL

dnl common library version
version_info='0:4:0'
AC_SUBST(version_info)

# Checks for programs.
 	
# Turn off shared libraries during beta-testing, since they
# make the build process take too long.
AC_DISABLE_SHARED
AC_PROG_LIBTOOL

AC_SUBST(LIBTOOL_DEPS)
AC_PROG_YACC
AC_PROG_CC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_CPP
AC_PROG_MKDIR_P

# Checks for functions
AC_REPLACE_FUNCS([strtok_r])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for libraries
AC_CHECK_LIB([m], [floor])

AC_SUBST(MATIO_LIB)
matio=1
AC_CHECK_HEADER(matio.h, [], [matio=0])
AC_CHECK_LIB(matio, Mat_Create, [matio=matio], [matio=0])
if test $matio == 0
then
	echo "Error! You need to install libmatio first."
        exit -1
else
	MATIO_LIB=-lmatio
fi

AM_WITH_DMALLOC

AC_ARG_ENABLE(efence,
[  --enable-efence         Use electric fence (www.perens.com)],
[case "$enableval" in \
	yes)  efence=yes ;; \
	no)   efence=no;; \
	*)    efence=no;; \
esac], [efence=no])

# Check for efence
if test $efence = yes; then
AC_CHECK_LIB(efence,memalign)
fi

AC_CHECK_FUNCS([strdup strtol strtoul])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
